--- a/Code/CSS/MB_detail.css
+++ b/Code/CSS/MB_detail.css
@@ -90,6 +90,7 @@ body {
 .main .PriceDetail li {
     color: #999;
     font-size: .8rem;
+    cursor: pointer;
 }
 .main .PriceDetail li span {
     font-size: .8rem;
